--- a/app/src/main/res/xml/main_preference.xml
+++ b/app/src/main/res/xml/main_preference.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="Server-Related Management">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <PreferenceCategory android:title="Server-Related Management"
+        app:iconSpaceReserved="false">
 
         <Preference
             android:key="server_status"
             android:selectable="true"
-            android:title="Server Status: " />
+            android:title="Server Status: "
+            app:iconSpaceReserved="false"/>
     </PreferenceCategory>
-    <PreferenceCategory android:title="Notification Management">
+    <PreferenceCategory android:title="Notification Management"
+        app:iconSpaceReserved="false">
 
         <SwitchPreference
             android:defaultValue="false"
             android:key="disable_charging_state"
-            android:title="Disable Charging State" />
+            android:title="Disable Charging State"
+            app:iconSpaceReserved="false"/>
         <Preference
             android:key="blacklist_notification"
             android:title="Add Notification Blacklist"
-            android:fragment="com.kangdroid.notification.BlackList"/>
+            android:fragment="com.kangdroid.notification.BlackList"
+            app:iconSpaceReserved="false"/>
     </PreferenceCategory>
 </PreferenceScreen>
