--- a/app/src/main/res/xml/main_preference.xml
+++ b/app/src/main/res/xml/main_preference.xml
@@ -18,7 +18,7 @@
             android:key="enter_server_port"
             android:selectAllOnFocus="true"
             android:singleLine="true"
-            android:title="Set Server Port"
+            android:title="@string/server_port_title"
             app:iconSpaceReserved="false"/>
 
         <Preference
